--- a/.github/workflows/SonarCloud_analysis.yml
+++ b/.github/workflows/SonarCloud_analysis.yml
@@ -21,4 +21,4 @@ jobs:
 
       - name: Run the python script
         working-directory: scripts
-        run: python.py
+        run: python python.py
