feat: added organization name and project key

--- a/.github/workflows/SonarCloud_analysis.yml
+++ b/.github/workflows/SonarCloud_analysis.yml
@@ -28,3 +28,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Provided by GitHub
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_ORGANIZATION: "iskidanova-akumo"
+          SONAR_PROJECT_KEY: "iskidanova-akumo"
