--- a/.github/workflows/SonarCloud_analysis.yml
+++ b/.github/workflows/SonarCloud_analysis.yml
@@ -25,8 +25,10 @@ jobs:
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarqube-scan-action@v5
+        with: 
+          projectKey: "iskidanova-akumo"
+          organization: "iskidanova-akumo"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Provided by GitHub
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_ORGANIZATION: "iskidanova-akumo"
-          SONAR_PROJECT_KEY: "iskidanova-akumo"
+        
