--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.projectKey=iskidanova-akumo_ak12-infra-sonarqube-test
 sonar.organization=iskidanova-akumo
-sonar.sources=srs
+sonar.sources=src
