feat: added the puthon version to properties file

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=iskidanova-akumo_ak12-infra-sonarqube-test
 sonar.organization=iskidanova-akumo
 sonar.sources=scripts
 sonar.language=py
+sonar.python.version=3.9
