--- a/.github/workflows/SonarCloud_analysis.yml
+++ b/.github/workflows/SonarCloud_analysis.yml
@@ -1,5 +1,8 @@
 name: SonarCloud Analysis
 
+env: 
+  AWS_REGION: "us-east-1"
+  TER_VERSION: "1.12.2"
 
 on: 
   push:
@@ -28,4 +31,30 @@ jobs:
         env:
           SONAR_HOST_URL: "https://sonarcloud.io/"
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        
+  tf_plan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+        with:
+          terraform_version: ${{ env.TER_VERSION }}
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Run Terraform Init 
+        run: terraform init 
+
+      - name: Run Terraform validate
+        run: terraform validate
+
+      - name: Run Terraform plan 
+        run: |
+          terraform plan -out=plan.tfplan
+          terraform show -json -no-color plan.tfplan > tfplan.json
