--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=iskidanova-akumo_ak12-infra-sonarqube-test
 sonar.organization=iskidanova-akumo
-sonar.sources=scripts
+sonar.sources=scripts,infra
 sonar.language=py
 sonar.python.version=3.9
